--- a/style.css
+++ b/style.css
@@ -7,8 +7,8 @@
 --azul-claro: #22007cff;
 --titulo:"Libre Baskerville", serif;
 --texto: "Oswald", sans-serif;
-
-
-
-
+}
+body{
+  background-color: var(--azul-claro);
+ font-family: var(--texto);
 }
